@@ -1,5 +1,5 @@
 MiniUPnP project
-(c) 2006-2018 Thomas Bernard
+(c) 2006-2019 Thomas Bernard
 webpage: http://miniupnp.free.fr/ or https://miniupnp.tuxfamily.org/
 github: https://github.com/miniupnp/miniupnp
 freecode: http://freecode.com/projects/miniupnp
